# biosignalml-browserlib

./: CMakeLists.txt  annotationdialog.cpp  annotationdialog.h  annotationlist.cpp  annotationlist.h  annotationlist.ui  browser.cpp  chart.ui  chartform.h  chartplot.cpp  chartplot.h  mainwindow.cpp  mainwindow.h  nrange.cpp  nrange.h  scroller.cpp  signallist.h  signalview.cpp  table.cpp  table.h  typedefs.h  widgets.cpp  widgets.h
src/: CMakeLists.txt  annotationdialog.cpp  annotationdialog.h  annotationlist.cpp  annotationlist.h  browser.cpp  browser.h  browser_exports.h  chartform.cpp  chartplot.cpp  chartplot.h  main.cpp  mainwindow.cpp  nrange.cpp  nrange.h  scroller.h  scroller.ui  signallist.cpp  signalview.h  signalview.ui  table.cpp  table.h  typedefs.h
ui/: mainwindow.ui
